clusters/corpus/apps/personal/meshtastic-webui/froggy-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: froggy
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ${cloudflared_tunnel_uuid}.cfargotunnel.com
  labels:
    use-cloudflare-dns-solver: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "meshui.${personal_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: froggy
                port:
                  number: 443
          - pathType: Prefix
            path: /json
            backend:
              service:
                name: froggy
                port:
                  number: 443
